--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,7 @@
 {{ site.description }}
 </div>
 
+<!--
 <div class="sidebar well">
     <h1>Recent Posts</h1>
     <ul>
@@ -10,7 +11,7 @@
         {% endfor %}
     </ul>
 </div>
-
+#changed to delete "recent post" -->
 <div class="sidebar well">
 {% include links-list.html %}
 </div>
