--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 
 <div class="container container-left">
     <div class="row">
-        <div class="col-md-3 hidden-xs">
+        <div class="col-md-4 hidden-xs"> <!-- default 3 -->
             {% include sidebar.html %}
         </div>
-        <div class="col-md-9">
+        <div class="col-md-8"> <!-- #default 9 (total=12) -->
             {{ content }}
         </div>
     </div>
