--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,15 +31,17 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/member.html">Member</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/publication.html">Publication</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/about.html">English</a></li>
+<!--                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     {% if site.gitlab != '' %}
                       <li class="active"><a href="https://gitlab.com/{{ site.gitlab }}">Gitlab</a></li>
                     {% endif %}
                     {% if site.github != '' %}
                       <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                     {% endif %}
+# cahnged -->
                 </ul>
               </div>
         </div>
