--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/member.html">Member</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/publication.html">Publication</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/about.html">English</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/english.html">English</a></li>
 <!--                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     {% if site.gitlab != '' %}
                       <li class="active"><a href="https://gitlab.com/{{ site.gitlab }}">Gitlab</a></li>
