--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{{ site.name }}</title>
+    <title>Takabe Lab.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
@@ -34,6 +34,7 @@
                     <li class="active"><a href="{{ site.baseurl }}/member.html">Member</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/publication.html">Publication</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/english.html">English</a></li>
+<li class="active"><a href="{{ site.baseurl }}/4applicants.html">Q&A</a></li>
 <!--                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     {% if site.gitlab != '' %}
                       <li class="active"><a href="https://gitlab.com/{{ site.gitlab }}">Gitlab</a></li>
