--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -1,6 +1,6 @@
 <h1>Links</h1>
 <ul>
-  <li><a href="https://www.titech.ac.jp/">東京工業大学</a></li>
+  <li><a href="https://www.titech.ac.jp/">東京科学大学</a></li>
   <li><a href="https://www.titech.ac.jp/about/organization/schools/organization04?_gl=1*16dn7cp*_ga*MzE5NzY2NTQwLjE2MzExNTAzNzY.*_ga_VKBJ61GEPE*MTYzMTE1MDM3NS4xLjEuMTYzMTE1MDM5NS4w">情報理工学院</a></li>
   <li><a href="https://educ.titech.ac.jp/is/">数理・計算科学系</a></li>
 </ul>
